@@ -7,6 +7,7 @@
 * Rearrange pod documentation to remove extraenous comment (Tony Mancill)
 * Cope better with IPv6 addresses
 * Fix bug with passing arguments from command line to comms method binary
+* Rework defaultport code
 
 2009-03-26 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.25-1
 
